feat: Establish initial MeritSpace application structure, adding real-time monitoring with video proctoring, manual grading, exam creation, and internationalization support.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ pnpm-debug.log*
 # environment variables
 server/.env
 server/.env.production
+client/.env
+client/.env.production
 client/vite.config.ts
 
 # macOS-specific files
